--- a/about.html
+++ b/about.html
@@ -41,10 +41,10 @@
     <h1>About me</h1>
     <h3>Front-end developer from Damascus, Syria</h3>
     <p>
-      Lorem ipsum dolor sit amet, consectetur adipisicing elit. Numquam aperiam
-      provident tempora? Cumque adipisci, non dolorem quia, odit qui alias
-      veniam excepturi rem dolor fugit dignissimos, sed voluptatum blanditiis
-      harum.
+      Far far away, behind the word mountains, far from the countries Vokalia
+      and Consonantia, there live the blind texts. Separated they live in
+      Bookmarksgrove right at the coast of the Semantics, a large language
+      ocean.
     </p>
 
     <div class="container mb-5">
