--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         </div>
       </div>
     </nav>
-    <h2>👋 Hi I am</h2>
+    <h2>👋 Hi, I am</h2>
     <h1 id="top">Yara Alhawari</h1>
     <h3>Front-end developer, based in Germany</h3>
     <div class="navigation-links">
@@ -77,10 +77,10 @@
         <div class="col-md-6">
           <div class="title mb-3 h2">Yoga app</div>
           <div class="appDescription text-start">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis
-            quia, dignissimos nam ratione veniam quibusdam porro omnis quam vel
-            eos eveniet alias temporibus deserunt veritatis minima fugiat
-            explicabo eum dolore.
+            Far far away, behind the word mountains, far from the countries
+            Vokalia and Consonantia, there live the blind texts. Separated they
+            live in Bookmarksgrove right at the coast of the Semantics, a large
+            language ocean. A small river named Duden flows by
           </div>
           <div class="my-4">
             <a
@@ -96,10 +96,10 @@
         <div class="col-md-6">
           <div class="title mb-3 h2">Weather app</div>
           <div class="appDescription text-start">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis
-            quia, dignissimos nam ratione veniam quibusdam porro omnis quam vel
-            eos eveniet alias temporibus deserunt veritatis minima fugiat
-            explicabo eum dolore.
+            Far far away, behind the word mountains, far from the countries
+            Vokalia and Consonantia, there live the blind texts. Separated they
+            live in Bookmarksgrove right at the coast of the Semantics, a large
+            language ocean. A small river named Duden flows by
           </div>
           <div class="my-4">
             <a
@@ -130,10 +130,10 @@
         <div class="col-md-6">
           <div class="title mb-3 h2">Yogurt app</div>
           <div class="appDescription text-start">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis
-            quia, dignissimos nam ratione veniam quibusdam porro omnis quam vel
-            eos eveniet alias temporibus deserunt veritatis minima fugiat
-            explicabo eum dolore.
+            Far far away, behind the word mountains, far from the countries
+            Vokalia and Consonantia, there live the blind texts. Separated they
+            live in Bookmarksgrove right at the coast of the Semantics, a large
+            language ocean. A small river named Duden flows by
           </div>
           <div class="mt-5">
             <a
