--- a/about.html
+++ b/about.html
@@ -39,7 +39,7 @@
       </div>
     </nav>
     <h1>About me</h1>
-    <h3>Front-end developer from Damascus, Syria</h3>
+    <h3>Front-end developer </h3>
     <p>
       Far far away, behind the word mountains, far from the countries Vokalia
       and Consonantia, there live the blind texts. Separated they live in
@@ -75,7 +75,7 @@
     <div id="contact">
       <div class="footer">📮 Contact me</div>
       <a id="my-email" href="mailto:[email]" class="email-link">
-        yara.alhawari@gmail.com
+        
       </a>
     </div>
   </body>
